welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:8: error: not found: value Red
	setCouleurBrosse(Red);
                         ^MethodsPicture:24: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
faireV();
      ^